welcome.lessons.welcome.array.array667.Array667.scala.error
array667:5: error: not found: value second
    second=premier
    ^array667:6: error: not found: value premier
    premier=nums(i)
    ^array667:7: error: not found: value second
    if (second==6 & (premier==6 | premier==7)) double6+=1
        ^array667:7: error: not found: value premier
    if (second==6 & (premier==6 | premier==7)) double6+=1
                     ^array667:7: error: not found: value premier
    if (second==6 & (premier==6 | premier==7)) double6+=1
                                  ^